--- a/css/cms.css
+++ b/css/cms.css
@@ -869,6 +869,12 @@ button:focus {
 
 /** common css */
 /*header css start*/
+.form-control {
+  font-size: 1.5rem;
+  border: 0.2rem solid #009aff; }
+  .form-control:focus {
+    box-shadow: none; }
+
 header {
   width: 100%;
   z-index: 9;
@@ -1411,8 +1417,17 @@ header {
 /*featured section css start*/
 .featured-tile {
   margin: 0 0.5rem;
-  margin-top: 2rem;
   height: Calc(100% - 2rem); }
+  .featured-tile.subscribed .featured-img-slider:before, .featured-tile.subscribed > a:before {
+    content: 'sponsorizzata';
+    position: absolute;
+    top: 10px;
+    z-index: 1;
+    padding: 5px 5px 7px;
+    background-color: #00a006;
+    color: #fff;
+    font-size: 14px;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.4); }
   .featured-tile .featured-img-slider {
     z-index: 0; }
     .featured-tile .featured-img-slider .owl-nav {
@@ -1564,9 +1579,6 @@ header {
         fill: #d3a400; }
   .featured-wrapper .section-ttl {
     margin: 7rem 0 5rem; }
-  @media (max-width: 1920px) {
-    .featured-wrapper .featured-tile {
-      margin-top: 2rem; } }
   @media (max-width: 991.98px) {
     .featured-wrapper .featured-map {
       margin-right: calc(var(--bs-gutter-x) / -2); }
@@ -1588,13 +1600,11 @@ header {
   @media (min-width: 1921px) {
     .featured-wrapper .gx-5 {
       --bs-gutter-x: 0; }
-      .featured-wrapper .gx-5 .featured-tile {
-        margin-top: 2rem; }
-        .featured-wrapper .gx-5 .featured-tile .featured-content {
-          padding: 2rem; }
-          .featured-wrapper .gx-5 .featured-tile .featured-content .wishlist-btn .wishlist-unfill,
-          .featured-wrapper .gx-5 .featured-tile .featured-content .wishlist-btn .wishlist-fill {
-            margin-top: 0; } }
+      .featured-wrapper .gx-5 .featured-tile .featured-content {
+        padding: 2rem; }
+        .featured-wrapper .gx-5 .featured-tile .featured-content .wishlist-btn .wishlist-unfill,
+        .featured-wrapper .gx-5 .featured-tile .featured-content .wishlist-btn .wishlist-fill {
+          margin-top: 0; } }
   @media (max-width: 375px) {
     .featured-wrapper .gx-5 .space-btn {
       width: 100%; } }
@@ -1772,7 +1782,13 @@ header {
     text-align: center;
     width: 85%;
     max-height: 4.5rem;
-    color: inherit; }
+    color: inherit;
+    background: url("/wp-content/themes/mapparte/assets/images/newsletter-btn-bg.svg");
+    border: none;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    font-size: 1.6rem;
+    min-height: 100%; }
     .newsletter-wrapper .read-more p {
       padding: 1.5rem 0;
       color: inherit;
@@ -1780,6 +1796,8 @@ header {
       margin-left: 0; }
     .newsletter-wrapper .read-more img {
       max-height: 4.5rem; }
+  .newsletter-wrapper .form-check-label a {
+    color: #fff; }
   @media (min-width: 1921px) {
     .newsletter-wrapper {
       padding: 10rem 0 18rem; } }
@@ -2033,15 +2051,6 @@ footer {
       transition: ease-in all 0.3s; }
       .search-wrapper .search-panel .more-filter-btn:hover .icon {
         fill: #ffffff; }
-  .search-wrapper .search-panel .form-select {
-    height: 3.5rem;
-    font-size: 1.5rem;
-    color: #000;
-    border-radius: 0;
-    padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-    width: 60%; }
-    .search-wrapper .search-panel .form-select:focus {
-      box-shadow: none; }
   .search-wrapper .search-panel .sort-by-ttl {
     color: #ffffff;
     font-size: 1.5rem;
@@ -2168,17 +2177,31 @@ footer {
 .filter-options-wrapper {
   background-color: #ffffff;
   position: absolute;
-  top: auto;
+  top: 100%;
   left: 0;
   width: 100%;
+  height: calc(100vh - 260px);
   opacity: 0;
   visibility: hidden;
   z-index: 1;
   transition: ease-in all 0.3s; }
-  .filter-options-wrapper .gx-5 {
+  .filter-options-wrapper .form-floating {
+    margin: 5px 0; }
+  .filter-options-wrapper .container {
     --bs-gutter-x: 5rem;
     z-index: 2;
-    position: relative; }
+    position: relative;
+    overflow-y: auto;
+    height: calc(100% - 2rem);
+    margin-top: 1rem;
+    margin-bottom: 1rem; }
+    .filter-options-wrapper .container::-webkit-scrollbar {
+      width: 3px;
+      height: 3px; }
+    .filter-options-wrapper .container::-webkit-scrollbar-track {
+      background-color: rgba(0, 0, 0, 0.1); }
+    .filter-options-wrapper .container::-webkit-scrollbar-thumb {
+      background-color: #eb5763; }
   .filter-options-wrapper .price-wrapper {
     padding: 1rem 0; }
     .filter-options-wrapper .price-wrapper .irs--flat .irs-line {
@@ -2230,24 +2253,21 @@ footer {
       color: #eb5763;
       text-align: center; }
     .filter-options-wrapper .price-wrapper .form-select {
-      height: 3.5rem;
       font-size: 1.5rem;
       color: #000;
       border-radius: 0;
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      width: 60%; }
+      border: 0.2rem solid #009aff;
+      line-height: 3rem; }
       .filter-options-wrapper .price-wrapper .form-select:focus {
         box-shadow: none; }
     .filter-options-wrapper .price-wrapper .sort-by-ttl {
       color: #eb5763;
       font-size: 1.5rem;
       font-weight: 400;
-      margin-right: 1rem; }
+      margin-right: 1rem;
+      white-space: nowrap; }
   .filter-options-wrapper .filter-tiles {
-    margin: 4rem 0 0;
-    max-height: 50vh;
-    overflow-y: auto;
-    overflow-x: hidden; }
+    margin: 4rem 0 0; }
     .filter-options-wrapper .filter-tiles .filter-tile .filter-ttl {
       color: #525252;
       font-size: 1.7rem;
@@ -2281,25 +2301,9 @@ footer {
     .filter-options-wrapper.active .price-wrapper .irs--flat .irs-from,
     .filter-options-wrapper.active .price-wrapper .irs--flat .irs-to {
       visibility: visible !important; }
-  @media screen and (min-width: 1440px) and (max-height: 680px) {
-    .filter-options-wrapper .filter-tiles {
-      overflow-y: auto;
-      max-height: 40vh; } }
-  @media screen and (min-width: 1399px) and (max-height: 680px) {
-    .filter-options-wrapper .filter-tiles {
-      overflow-y: auto;
-      max-height: 35vh; } }
-  @media screen and (min-width: 992px) and (max-height: 680px) {
-    .filter-options-wrapper .filter-tiles {
-      overflow-y: auto;
-      max-height: 38vh; } }
   @media (max-width: 991.98px) {
     .filter-options-wrapper {
       top: 31.5rem; } }
-  @media screen and (min-width: 768px) and (max-height: 680px) {
-    .filter-options-wrapper .filter-tiles {
-      overflow-y: auto;
-      max-height: 38vh; } }
   @media (max-width: 767.98px) {
     .filter-options-wrapper {
       position: fixed;
@@ -2307,12 +2311,9 @@ footer {
       padding-top: 10rem; }
       .filter-options-wrapper .gx-5 {
         --bs-gutter-x: 1rem; }
-      .filter-options-wrapper .filter-tiles {
-        overflow-y: auto;
-        max-height: 61vh; }
       .filter-options-wrapper .more-filter-btn-overly {
         position: absolute;
-        bottom: 15%;
+        bottom: 15px;
         right: 5%;
         z-index: 9;
         transform: translateX(-5%);
@@ -2797,6 +2798,51 @@ footer {
 
 /*magazine search page css end*/
 /*login popup css start*/
+.spinner {
+  position: absolute;
+  top: 23%;
+  left: 37%;
+  z-index: 99;
+  display: none; }
+
+.spinner img {
+  width: 20%; }
+
+.xoo-el-processing {
+  position: relative; }
+
+.xoo-el-processing::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #ffffff;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite; }
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn); }
+  to {
+    transform: rotate(1turn); } }
+.search-wrapper .search-panel #activity {
+  width: 100%; }
+
+.booking-table-wrapper .contact-wrapper {
+  background-image: none;
+  padding: 0; }
+
+.booking-table-wrapper .contact-wrapper .contact-form-wrapper {
+  padding: 1rem 10rem;
+  margin: 1rem auto;
+  width: 100%; }
+
 #login-popup .modal-dialog {
   max-width: 35rem; }
 #login-popup .modal-header {
@@ -3063,7 +3109,7 @@ footer {
     z-index: 3;
     opacity: 0.65; }
   .form-floating .form-control {
-    border: none;
+    border: none !important;
     padding-top: 2.3rem;
     font-size: 1.4rem; }
     .form-floating .form-control::-webkit-inner-spin-button,
@@ -3081,7 +3127,8 @@ footer {
     border-left: 0.2rem solid #009aff;
     margin-left: 0 !important;
     color: #009aff;
-    font-size: 2.4rem; }
+    font-size: 2.4rem;
+    padding-top: 0 !important; }
 
 .detail-wrapper {
   padding-bottom: 10rem; }
@@ -3874,12 +3921,6 @@ footer {
       display: flex;
       align-items: center;
       transition: all 0.3s ease-in; }
-    .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-control {
-      min-height: 4.8rem;
-      font-size: 1.5rem;
-      border: 0.2rem solid #009aff; }
-      .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile .form-control:focus {
-        box-shadow: none; }
     .profile-detail-wrapper .profile-details-section .profile-update-form .form-tile textarea.form-control {
       height: 13rem; }
   .profile-detail-wrapper .profile-details-section .profile-update-form p {
@@ -4326,6 +4367,45 @@ footer {
   .subscription-detail-page .new-booking-wrapper .booking-details-section .status-wrapper.accepted-status-wrapper ul {
     width: 100%; }
 
+.plan-list {
+  margin-top: 5rem;
+  margin-bottom: 5rem; }
+  @media (max-width: 767.98px) {
+    .plan-list {
+      justify-content: center; } }
+  .plan-list .plan-wrapper {
+    padding: 2rem;
+    background-color: #65889e;
+    transition: all 0.3s ease-in-out;
+    margin: 1rem; }
+    .plan-list .plan-wrapper .plan-ttl {
+      text-align: center;
+      font-weight: 500;
+      color: #fff; }
+    .plan-list .plan-wrapper .plan-price {
+      text-align: center;
+      font-weight: 500;
+      color: #fff;
+      font-size: 5rem;
+      line-height: 1;
+      margin-top: 5rem; }
+      .plan-list .plan-wrapper .plan-price span {
+        vertical-align: text-top;
+        color: inherit;
+        font-size: 2rem;
+        line-height: 2; }
+        .plan-list .plan-wrapper .plan-price span.points {
+          vertical-align: text-bottom;
+          color: inherit;
+          font-size: 3rem;
+          line-height: 1.5; }
+    .plan-list .plan-wrapper .status-note {
+      color: #fff;
+      margin-top: 3rem; }
+    .plan-list .plan-wrapper:hover {
+      box-shadow: 0 0 20px 0px #4f6675a6;
+      transition: all 0.5s ease-in-out; }
+
 .subscription-list-page .new-booking-wrapper .booking-details-section {
   padding-top: 15rem; }
   .subscription-list-page .new-booking-wrapper .booking-details-section .active-plan-ttl {
@@ -4355,40 +4435,6 @@ footer {
     line-height: 1.5;
     margin-bottom: 1.1rem;
     margin-top: 6rem; }
-  .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list {
-    margin-top: 5rem;
-    margin-bottom: 5rem; }
-    .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper {
-      padding: 2rem;
-      background-color: #65889e;
-      transition: all 0.3s ease-in-out;
-      margin: 1rem; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-ttl {
-        text-align: center;
-        font-weight: 500;
-        color: #fff; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price {
-        text-align: center;
-        font-weight: 500;
-        color: #fff;
-        font-size: 5rem;
-        line-height: 1;
-        margin-top: 5rem; }
-        .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price span {
-          vertical-align: text-top;
-          color: inherit;
-          font-size: 2rem;
-          line-height: 2; }
-          .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .plan-price span.points {
-            vertical-align: text-bottom;
-            color: inherit;
-            font-size: 3rem;
-            line-height: 1.5; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper .status-note {
-        color: #fff; }
-      .subscription-list-page .new-booking-wrapper .booking-details-section .plan-list .plan-wrapper:hover {
-        box-shadow: 0 0 20px 0px #4f6675a6;
-        transition: all 0.5s ease-in-out; }
   @media (max-width: 767.98px) {
     .subscription-list-page .new-booking-wrapper .booking-details-section .status-wrapper {
       margin: 0; }
