--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -16,27 +16,27 @@
 h1 {
   @include defaultFontStyle($Roboto, 400, 4, 5, $black);
   font-weight: 500;
-  margin: 4rem 0 2rem 0;
+  padding: 4rem 0 2rem 0;
 }
 h2 {
   @include defaultFontStyle($Roboto, 400, 3.6, 4.6, $black);
-  margin: 3rem 0 1rem 0;
+  padding: 3rem 0 1rem 0;
 }
 h3 {
   @include defaultFontStyle($Roboto, 400, 3.2, 4.2, $black);
-  margin: 1rem 0 0.5rem 0;
+  padding: 1rem 0 0.5rem 0;
 }
 h4 {
   @include defaultFontStyle($Roboto, 400, 2.8, 3.8, $black);
-  margin: 1rem 0 0.5rem 0;
+  padding: 1rem 0 0.5rem 0;
 }
 h5 {
   @include defaultFontStyle($Roboto, 400, 2.2, 3.4, $black);
-  margin: 1rem 0 0.5rem 0;
+  padding: 1rem 0 0.5rem 0;
 }
 h6 {
   @include defaultFontStyle($Roboto, 400, 1.9, 3.2, $black);
-  margin: 0.5rem 0 0.2rem 0;
+  padding: 0.5rem 0 0.2rem 0;
 }
 p {
   @include defaultFontStyle($Roboto, 400, 1.8, 3.2, $black);
