--- a/css/main.css
+++ b/css/main.css
@@ -569,7 +569,7 @@ h1 {
   line-height: 5rem;
   color: #19232c;
   font-weight: 500;
-  margin: 4rem 0 2rem 0; }
+  padding: 4rem 0 2rem 0; }
 
 h2 {
   font-family: "Roboto", sans-serif;
@@ -578,7 +578,7 @@ h2 {
   font-size: 3.6rem;
   line-height: 4.6rem;
   color: #19232c;
-  margin: 3rem 0 1rem 0; }
+  padding: 3rem 0 1rem 0; }
 
 h3 {
   font-family: "Roboto", sans-serif;
@@ -587,7 +587,7 @@ h3 {
   font-size: 3.2rem;
   line-height: 4.2rem;
   color: #19232c;
-  margin: 1rem 0 0.5rem 0; }
+  padding: 1rem 0 0.5rem 0; }
 
 h4 {
   font-family: "Roboto", sans-serif;
@@ -596,7 +596,7 @@ h4 {
   font-size: 2.8rem;
   line-height: 3.8rem;
   color: #19232c;
-  margin: 1rem 0 0.5rem 0; }
+  padding: 1rem 0 0.5rem 0; }
 
 h5 {
   font-family: "Roboto", sans-serif;
@@ -605,7 +605,7 @@ h5 {
   font-size: 2.2rem;
   line-height: 3.4rem;
   color: #19232c;
-  margin: 1rem 0 0.5rem 0; }
+  padding: 1rem 0 0.5rem 0; }
 
 h6 {
   font-family: "Roboto", sans-serif;
@@ -614,7 +614,7 @@ h6 {
   font-size: 1.9rem;
   line-height: 3.2rem;
   color: #19232c;
-  margin: 0.5rem 0 0.2rem 0; }
+  padding: 0.5rem 0 0.2rem 0; }
 
 p {
   font-family: "Roboto", sans-serif;
