--- a/css/cms.scss
+++ b/css/cms.scss
@@ -3,7 +3,7 @@
 @import "mixins"; /** mixins */
 @import "typography"; /** typography */
 @import "common"; /** common css */
-@import "theme"; /** theme */
+//@import "theme"; /** theme */
 
 
 /*booking page css start*/
@@ -777,7 +777,7 @@ a.drawer-btn {
         }
 
         .filter-tile {
-          margin-bottom: 3rem; 
+          margin-bottom: 3rem;
 
           .filter-lists {
             .form-check {
