--- a/css/cms.scss
+++ b/css/cms.scss
@@ -1,7 +1,7 @@
 @import "variables"; /** variables css */
 @import "reset"; /** reset css */
 @import "mixins"; /** mixins */
-@import "typography"; /** typography */
+//@import "typography"; /** typography */
 @import "common"; /** common css */
 //@import "theme"; /** theme */
 
