--- a/css/main.css
+++ b/css/main.css
@@ -3424,6 +3424,8 @@ footer {
       .detail-wrapper .booking-form-wrapper .booking-form .time-slot-wrapper .time-slot-tile {
         width: 33.33333%;
         transition: all ease-in 0.3s; }
+        .detail-wrapper .booking-form-wrapper .booking-form .time-slot-wrapper .time-slot-tile input::-webkit-datetime-edit {
+          overflow: visible; }
         @media (max-width: 767.98px) {
           .detail-wrapper .booking-form-wrapper .booking-form .time-slot-wrapper .time-slot-tile {
             width: 100%; } }
@@ -3474,11 +3476,16 @@ footer {
         background: #fff;
         height: 3.5rem; }
     .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn {
+      cursor: pointer;
       width: 100%;
       font-size: 1.8rem;
       line-height: 1;
       text-transform: uppercase;
       border: 0.4rem solid #cccccc50; }
+      .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn[disabled] {
+        cursor: auto;
+        pointer-events: none;
+        opacity: 0.1; }
     .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn-secondary {
       background-color: #333;
       padding: 1rem;
