--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -5991,3 +5991,14 @@ footer {
   }
 }
 /*subscription page css end*/
+
+/// stars rating ///
+
+.svg-inline--fa.fa-w-18 {
+    width: 2em;
+    height: 2em;
+
+    path {
+      fill: #ffc200;
+    }
+}
