--- a/css/main.css
+++ b/css/main.css
@@ -4443,6 +4443,12 @@ footer {
       border-bottom: 1px solid #ffffff75; } }
 
 /*subscription page css end*/
+.svg-inline--fa.fa-w-18 {
+  width: 2em;
+  height: 2em; }
+  .svg-inline--fa.fa-w-18 path {
+    fill: #ffc200; }
+
 /** theme */
 
 /*# sourceMappingURL=main.css.map */
