--- a/css/main.css
+++ b/css/main.css
@@ -870,12 +870,10 @@ button:focus {
 /*header css start*/
 .form-control {
   font-size: 1.5rem;
-  border: 0.2rem solid #009aff; }
+  border: 0.2rem solid #009aff;
+  min-height: 42px; }
   .form-control:focus {
     box-shadow: none; }
-
-.form-select {
-  min-height: 42px; }
 
 header {
   width: 100%;
@@ -1418,8 +1416,7 @@ header {
 /*how work section css end*/
 /*featured section css start*/
 .featured-tile {
-  margin: 0 0.5rem;
-  height: Calc(100% - 2rem); }
+  margin: 0 0.5rem 3rem; }
   .featured-tile.subscribed .featured-img-slider:before, .featured-tile.subscribed > a:before {
     content: 'sponsorizzata';
     position: absolute;
@@ -1455,14 +1452,15 @@ header {
     padding: 2.5rem;
     position: relative; }
     .featured-tile .featured-content .featured-ttl {
-      font-weight: 400;
+      font-weight: 700;
       font-size: 2rem;
-      line-height: 1;
+      line-height: 1.2em;
       width: 85%; }
     .featured-tile .featured-content .featured-subttl {
-      font-size: 1.4rem;
+      font-size: 1.8rem;
+      font-weight: 700;
       display: inline-block;
-      line-height: 1;
+      line-height: 1.2em;
       margin-top: 0.5rem;
       width: 85%; }
     .featured-tile .featured-content .wishlist-btn {
@@ -1522,7 +1520,8 @@ header {
         .featured-tile .featured-content .rating .icon:last-child {
           fill: #ccc; }
     .featured-tile .featured-content .featured-desc {
-      line-height: 1.3;
+      font-size: 1.6rem;
+      line-height: 1.2;
       margin: 1.5rem 0 1.5rem; }
       .featured-tile .featured-content .featured-desc b {
         font-weight: 700; }
@@ -1556,7 +1555,6 @@ header {
   .featured-wrapper .map-wrapper {
     position: relative; }
     .featured-wrapper .map-wrapper #default {
-      margin-top: 2rem;
       position: sticky !important;
       top: 27rem;
       width: 100%;
@@ -2061,8 +2059,8 @@ footer {
   .search-wrapper .search-panel .action-btn .btn {
     background-color: #ffffff;
     display: inline-block;
-    height: 3.5rem;
-    width: 3.5rem;
+    height: 42px;
+    width: 42px;
     padding: 0.5rem;
     border-radius: 0; }
     .search-wrapper .search-panel .action-btn .btn .search-btn-wht {
