--- a/css/cms.scss
+++ b/css/cms.scss
@@ -710,7 +710,7 @@ a.drawer-btn {
       position: fixed;
       right: 0;
 
-      @include media991 {
+      @include media767 {
         display: none;
       }
     }
@@ -1032,3 +1032,122 @@ a.drawer-btn {
 
 
 /*step form css end*/
+
+
+// calendar for insert availability slots
+
+.acf-fields > .acf-tab-wrap:first-child .acf-tab-group {
+    flex-wrap: nowrap;
+    display: flex;
+}
+
+
+
+.acf-fields > .acf-tab-wrap {
+    overflow-x: auto;
+}
+
+.acf-fields > .acf-tab-wrap .acf-tab-group li a {
+    background: #0e6efc;
+    /* border: none; */
+}
+
+.acf-fields > .acf-tab-wrap .acf-tab-group li a:hover {
+    background: #0e6efc;
+}
+
+.acf-fields > .acf-tab-wrap .acf-tab-group li.active a {
+    background: #ffffff;
+}
+
+a.acf-button.button.button-primary {
+    background-color: #0e6efc;
+    padding: 12px;
+    border-radius: 4px;
+    justify-content: center;
+    margin: 12px;
+}
+
+.acf-repeater .acf-row-handle .acf-icon {
+    margin: 3px 6px;
+}
+
+a.acf-icon.-plus.small.acf-js-tooltip.hide-on-shift {
+    background-color: green;
+}
+
+a.acf-icon.-minus.small.acf-js-tooltip {
+    background-color: #f00;
+}
+
+td.acf-row-handle.remove {
+    padding: 0;
+}
+
+td.acf-row-handle.remove {
+}
+
+div#ui-datepicker-div {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    padding: 3rem;
+    width: 80%;
+    box-shadow: 0 4px 22px;
+}
+
+select.ui-timepicker-select.ui-state-default.ui-corner-all {
+    padding: 6px;
+    min-width: 92%;
+    margin: 0 auto;
+    display: block;
+}
+
+button.ui-datepicker-current.ui-state-default.ui-priority-secondary.ui-corner-all {
+    display: none;
+}
+
+dt.ui_tpicker_time_label {
+    display: none !important;
+}
+
+.ui-timepicker-div.ui-timepicker-oneLine > dl {
+    display: flex;
+    justify-content: space-between;
+}
+
+dd.ui_tpicker_hour {}
+
+.ui-timepicker-div.ui-timepicker-oneLine > dl > dd {
+    flex: 1;
+}
+
+.ui-timepicker-div.ui-timepicker-oneLine > dl > dd > div {
+    display: block !important;
+}
+
+.ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_minute:before, .ui-timepicker-div.ui-timepicker-oneLine dl dd.ui_tpicker_second:before {
+    content: none;
+}
+
+button.ui-datepicker-close.ui-state-default.ui-priority-primary.ui-corner-all {
+    display: block;
+    width: 100%;
+    min-width: 100%;
+    padding: 12px;
+    background-color: green;
+    color: #fff;
+    margin: 12px auto;
+}
+
+.ui-datepicker-title {
+}
+
+.ui-widget-header.ui-helper-clearfix.ui-corner-all {
+    margin: 0 0 24px;
+}
+
+dd.ui_tpicker_second {
+    display: none !important;
+}
