--- a/css/cms.scss
+++ b/css/cms.scss
@@ -1,5 +1,5 @@
 @import "variables"; /** variables css */
-@import "reset"; /** reset css */
+//@import "reset"; /** reset css */
 @import "mixins"; /** mixins */
 //@import "typography"; /** typography */
 @import "common"; /** common css */
