label media upload fixes

--- a/css/cms.scss
+++ b/css/cms.scss
@@ -1151,3 +1151,8 @@ button.ui-datepicker-close.ui-state-default.ui-priority-primary.ui-corner-all {
 dd.ui_tpicker_second {
     display: none !important;
 }
+
+
+.media-attachments-filter-heading {
+  display: none;
+}
