--- a/css/cms.css
+++ b/css/cms.css
@@ -962,4 +962,7 @@ button.ui-datepicker-close.ui-state-default.ui-priority-primary.ui-corner-all {
 dd.ui_tpicker_second {
   display: none !important; }
 
+.media-attachments-filter-heading {
+  display: none; }
+
 /*# sourceMappingURL=cms.css.map */
