--- a/css/cms.scss
+++ b/css/cms.scss
@@ -1078,6 +1078,10 @@ a.acf-icon.-plus.small.acf-js-tooltip.hide-on-shift {
 
 a.acf-icon.-minus.small.acf-js-tooltip {
     background-color: #f00;
+    display: block;
+    margin: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 td.acf-row-handle.remove {
@@ -1152,6 +1156,9 @@ dd.ui_tpicker_second {
     display: none !important;
 }
 
+.acf-tooltip.-confirm.left {
+    display: none;
+}
 
 .media-attachments-filter-heading {
   display: none;
