ratings css fix

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -5996,7 +5996,7 @@ footer {
 
 /// stars rating ///
 
-.svg-inline--fa.fa-w-18 {
+.svg-inline--fa.fa-w-18, .svg-inline--fa.fa-star-half-alt.fa-w-17 {
     width: 2em;
     height: 2em;
 
