--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -5549,7 +5549,7 @@ footer {
     &:checked {
       &:after {
         content: "";
-        background-image: url("https://demo.mapparte.com/wp-content/themes/mapparte/assets/images/check.png");
+        background-image: url("https://www.mapparte.com/wp-content/themes/mapparte/assets/images/check.png");
         background-position: center;
         background-size: contain;
         position: absolute;
