--- a/css/main.css
+++ b/css/main.css
@@ -4121,7 +4121,7 @@ footer {
   padding: 0 !important; }
   .acf-input input[type="checkbox"]:checked:after {
     content: "";
-    background-image: url("https://demo.mapparte.com/wp-content/themes/mapparte/assets/images/check.png");
+    background-image: url("/wp-content/themes/mapparte/assets/images/check.png");
     background-position: center;
     background-size: contain;
     position: absolute;
