--- a/css/main.css
+++ b/css/main.css
@@ -632,6 +632,9 @@ span {
   line-height: 2.8rem;
   color: #19232c; }
 
+em, i {
+  font-style: italic; }
+
 /** typography */
 html {
   font-size: 62.5%; }
