css magazine main tile fix

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -2683,7 +2683,7 @@ footer {
 
       .magazine-main-tile {
         .magazine-main-content {
-          width: 60%;
+          //width: 60%;
         }
       }
     }
